# llm-craft

./: .dockerignore  .env.example  .gcloudignore  .gitignor  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  cloudbuild.web.yaml  cloudbuild.yaml  compose.yml  main.py  pyproject.toml  skills-lock.json
apps/web/: .env.example  Dockerfile  package-lock.json  package.json  proxy.ts  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx
apps/web/app/admin/: page.tsx
apps/web/public/: manifest.webmanifest  sw.js
apps/web/src/components/: AgentTest.tsx  AppShell.tsx  ArenaCharts.tsx  BackButton.tsx  (+3 more)
artifacts/data/: sft_clean_dev_sample_2000.jsonl
configs/: pipeline_config.yaml
configs/sft/: default.yaml  qwen05b_10k_example.yaml  qwen05b_10k_rationale_example.yaml  qwen05b_10k_rationale_first_example.yaml  qwen3_4b_thinking_10k_example.yaml  qwen3_4b_thinking_dpo_example.yaml
datasets/: README.md
datasets/eirclewis/: README.md  dataset_ericlewis.py
datasets/elementia/: groups.txt  recipes.csv
datasets/final-10k/: batch_export_manifest.json  batch_import_manifest.json  batch_index.jsonl  dev.jsonl  rejected.jsonl  test.jsonl
datasets/final-small-dataset/: batch_import_manifest.json  dev.jsonl  test.jsonl  train.jsonl
datasets/raw/elementia/: README.md  elements.csv  group_colors.txt
datasets/raw/ericlewis/: dataset_ericlewis.py
datasets/raw/redfast00/: cheat.py
datasets/reports/: clean_metrics.json  quality_reject_samples.jsonl
db/migrations/: 001_init.sql  002_dpo_preferences.sql  003_model_generated_sources.sql  004_rate_limits.sql  005_agent_runs.sql
docs/: all-in-one-vm-runbook.md  data_normalization.md  data_pipeline.md  postgres-local-db-runbook.md  qwen-combiner-vm-runbook.md  resultados_ablation_sft.md  resultados_sft.md  resumen-repaso.txt
docs/codigo/: adr_data_pipeline.md  bitacora_experimentos.md  data_pipeline.md  eval_creativity_pipeline.md  frontend_next_app.md  postgres_dataset_db.md  sft_qlora_pipeline.md  sft_training_colab.md  vertex_training.md
docs/informe/: correcciones_informe.md  destilacion_creatividad_composicional.md  recomendacion_sft_weighting.docx  resumen-repaso.md
scripts/: run_vertex_qwen3_thinking.sh
scripts/gcp/: create_all_in_one_vm.ps1  deploy_web_cloudrun.sh  model_vm.sh
scripts/vm/: bootstrap_all_in_one.sh
src/agent/: run.py
src/analysis/: __init__.py  candidates_loader.py  config.py  embed_utils.py  embedder_registry.py  glove_embed.py
src/analysis/clustering/: FINDINGS.md  __init__.py  inspect_rationale_clusters.py  relation_vectors.py  validate.py
src/data/: augment_canonical_with_expitau.py  build_dpo_pairs.py  clean.py  db.py  db_migrate.py  enrich_multi_output.py  enrich_rationales.py  enrich_teacher.py  export_eval.py  export_sft.py  import_final10k_to_postgres.py  normalize.py  quality.py  run_pipeline.py  schemas.py  validate.py
src/eval/: __init__.py  creativity.py  embeddings.py  judge_creativity.py  metrics.py  run_sft_eval.py  score_coverage.py  vertex_judge.py
src/sft/: __init__.py  collator.py  config.py  create_colab_zip.py  dataset.py  dpo.py  eval_base.py  losses.py  plotting.py  predict.py  prepare_train_eval_data.py  train.py  trainer.py  utils.py  vertex_submit.py
tests/data/: test_build_dpo_pairs.py  test_enrich_multi_output.py  test_enrich_rationales.py  test_enrich_teacher.py  test_export_eval.py  test_import_final10k_to_postgres.py  test_quality.py
tests/eval/: test_creativity.py  test_embeddings.py  test_judge_creativity.py  test_metrics.py  test_run_sft_eval.py  test_score_coverage.py  test_vertex_judge.py
tests/sft/: test_collator.py  test_config.py  test_create_colab_zip.py  test_dataset.py  test_dpo_collator.py  test_dpo_loss.py  test_losses.py  test_smoke_train.py  test_smoke_train_dpo.py  test_train_recipe_data.py
(+50 files in other folders)
