[project]
name = "llm-craft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "deepagents>=0.6.10",
    "huggingface-hub>=1.19.0",
    "langchain-google-genai>=4.2.5",
    "matplotlib>=3.10.0",
    "peft>=0.19.1",
    "pydantic>=2.13.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
# Opt-in group: análisis de patrones analógicos / clustering (src/analysis/clustering).
# scikit-learn trae scipy (usado para spearmanr). Use: uv sync --group analysis
analysis = [
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.6.0",
    "hdbscan>=0.8.40",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
